@@ -31,39 +31,16 @@ use Scalar::Util ();
 
 our $VERSION = 0.1;
 
-my ($fds_r, $fds_w) = ({ ref => {} }, { ref => {} });
+my ($fds_r, $fds_w) = ({}, {});
 my @timer;
 my $need_sort;
-
-sub add_fh($$) {
-   my ($self, $fds) = @_;
-
-   (vec $fds->{v}, $self->{fd}, 1) = 1
-      unless $fds->{w}{$self->{fd}};
-
-   push @{ $fds->{w}{$self->{fd}} }, $self;
-   Scalar::Util::weaken $fds->{w}{$self->{fd}}[-1];
-}
-
-sub del_fh($$) {
-   my ($self, $fds) = @_;
-
-   if (@{ $fds->{w}{$self->{fd}} } == 1) {
-      delete $fds->{w}{$self->{fd}};
-      (vec $fds->{v}, $self->{fd}, 1) = 0;
-   } else {
-      $fds->{w}{$self->{fd}} = [
-         grep $_ != $self, @{ $fds->{w}{$self->{fd}} }
-      ];
-   }
-}
 
 sub fds_chk($$) {
    my ($fds, $vec) = @_;
 
    for my $fd (keys %{ $fds->{w} }) {
       if (vec $vec, $fd, 1) {
-         $_ && $_->{cb}()
+         $_ && $_->[2]()
             for @{ $fds->{w}{$fd} || [] };
       }
    }
@@ -81,21 +58,22 @@ sub one_event {
 
    # 2. check timers
    if (@timer && $timer[0][0] <= $NOW) {
-      my $timer = shift @timer;
-      $timer->[1]{cb}() if $timer->[1];
-      return;
-   }
+      do {
+         my $timer = shift @timer;
+         $timer->[1][0]() if $timer->[1];
+      } while @timer && $timer[0][0] <= $NOW;
+   } else {
 
-   # 3. select
-   my $fds = select
-      my $r = $fds_r->{v},
-      my $w = $fds_w->{v},
-      undef,
-      @timer ? $timer[0][0] - $NOW  + 0.0009 : 3600;
-
-   if ($fds) {
-      fds_chk $fds_w, $w;
-      fds_chk $fds_r, $r;
+      # 3. select
+      if (my $fds = select
+            my $r = $fds_r->{v},
+            my $w = $fds_w->{v},
+            undef,
+            @timer ? $timer[0][0] - $NOW  + 0.0009 : 3600
+      ) {
+         fds_chk $fds_w, $w;
+         fds_chk $fds_r, $r;
+      }
    }
 }
 
@@ -104,33 +82,60 @@ sub io {
 
    $arg{fd} = fileno $arg{fh};
    
-   my $self = bless \%arg, $class;
+   my $self = bless [
+      $arg{fh},
+      $arg{poll} eq "r",
+      $arg{cb},
+      # q-idx
+   ], AnyEvent::Impl::Perl::Io::;
 
-   $self->add_fh ($fds_r) if $self->{poll} eq "r";
-   $self->add_fh ($fds_w) if $self->{poll} eq "w";
+   my $fds = $self->[1] ? $fds_r : $fds_w;
+
+   # add_fh
+   my $fd = fileno $self->[0];
+   my $q = $fds->{w}{$fd} ||= [];
+
+   (vec $fds->{v}, $fd, 1) = 1;
+
+   $self->[3] = @$q;
+   push @$q, $self;
+   Scalar::Util::weaken $q->[-1];
 
    $self
+}
+
+sub AnyEvent::Impl::Perl::Io::DESTROY {
+   my ($self) = @_;
+
+   my $fds = $self->[1] ? $fds_r : $fds_w;
+
+   # del_fh
+   my $fd = fileno $self->[0];
+
+   if (@{ $fds->{w}{$fd} } == 1) {
+      delete $fds->{w}{$fd};
+      (vec $fds->{v}, $fd, 1) = 0;
+   } else {
+      my $q = $fds->{w}{$fd};
+      my $last = pop @$q;
+
+      if ($last != $self) {
+         $q->[$self->[3]] = $last;
+         $last->[3] = $self->[3];
+      }
+   }
 }
 
 sub timer {
    my ($class, %arg) = @_;
    
-   my $self = bless \%arg, $class;
+   my $self = bless [$arg{cb}], AnyEvent::Impl::Perl::Timer::;
 
-   push @timer, [time + $self->{after}, $self];
+   push @timer, [time + $arg{after}, $self];
    Scalar::Util::weaken $timer[-1][1];
    $need_sort = 1;
 
    $self
-}
-
-sub DESTROY {
-   my ($self) = @_;
-
-   $self->del_fh ($fds_r) if $self->{poll} eq "r";
-   $self->del_fh ($fds_w) if $self->{poll} eq "w";
-
-   %$self = ();
 }
 
 1;
